{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 21,
  "lineage": "66fa2951-cc22-7998-2544-adad64491d2e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cefe457f2ad912a1",
            "arn": "arn:aws:ec2:ap-south-1:550833548002:elastic-ip/eipalloc-0cefe457f2ad912a1",
            "association_id": "eipassoc-09f94a484fb559ff9",
            "domain": "vpc",
            "id": "eipalloc-0cefe457f2ad912a1",
            "instance": "i-08ee63e654d8e8d57",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0385bdaa8b29f6508",
            "private_dns": "ip-10-0-1-41.ap-south-1.compute.internal",
            "private_ip": "10.0.1.41",
            "public_dns": "ec2-3-109-126-162.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.126.162",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Environment": "production",
              "Name": "ci-cd-pipeline-eip",
              "Project": "ci-cd-pipeline"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ci-cd-pipeline-eip",
              "Project": "ci-cd-pipeline"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app",
            "aws_security_group.app_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b8269d5e85954ef",
            "arn": "arn:aws:ec2:ap-south-1:550833548002:instance/i-08ee63e654d8e8d57",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ee63e654d8e8d57",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Testing",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0385bdaa8b29f6508"
              }
            ],
            "primary_network_interface_id": "eni-0385bdaa8b29f6508",
            "private_dns": "ip-10-0-1-41.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.41",
            "public_dns": "ec2-3-108-191-218.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.191.218",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-078742210b6f38c8c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05f62bfb1578df96b",
            "tags": {
              "Environment": "production",
              "Name": "ci-cd-pipeline-server",
              "Project": "ci-cd-pipeline"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "ci-cd-pipeline-server",
              "Project": "ci-cd-pipeline"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09513cad8c7cfe63b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550833548002",
            "id": "i-08ee63e654d8e8d57",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:550833548002:internet-gateway/igw-06df6353b8d79a824",
            "id": "igw-06df6353b8d79a824",
            "owner_id": "550833548002",
            "region": "ap-south-1",
            "tags": {
              "Name": "ci-cd-igw"
            },
            "tags_all": {
              "Name": "ci-cd-igw"
            },
            "vpc_id": "vpc-0998d1b710623b8d3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:550833548002:route-table/rtb-05b6401f8109c7f3a",
            "id": "rtb-05b6401f8109c7f3a",
            "owner_id": "550833548002",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06df6353b8d79a824",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ci-cd-public-rt"
            },
            "tags_all": {
              "Name": "ci-cd-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0998d1b710623b8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550833548002",
            "id": "rtb-05b6401f8109c7f3a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032b291bf4e4f9351",
            "region": "ap-south-1",
            "route_table_id": "rtb-05b6401f8109c7f3a",
            "subnet_id": "subnet-05f62bfb1578df96b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:550833548002:security-group/sg-09513cad8c7cfe63b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09513cad8c7cfe63b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3001
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "ci-cd-app-sg",
            "name_prefix": "",
            "owner_id": "550833548002",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0998d1b710623b8d3"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550833548002",
            "id": "sg-09513cad8c7cfe63b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:550833548002:subnet/subnet-05f62bfb1578df96b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f62bfb1578df96b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "550833548002",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "ci-cd-public-subnet"
            },
            "tags_all": {
              "Name": "ci-cd-public-subnet"
            },
            "vpc_id": "vpc-0998d1b710623b8d3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550833548002",
            "id": "subnet-05f62bfb1578df96b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:550833548002:vpc/vpc-0998d1b710623b8d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d3f6eb2af44610c",
            "default_route_table_id": "rtb-07b63e1d96d6ae4fb",
            "default_security_group_id": "sg-0c74b0ae048d35fe8",
            "dhcp_options_id": "dopt-041c1dcb650cf8381",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0998d1b710623b8d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b63e1d96d6ae4fb",
            "owner_id": "550833548002",
            "region": "ap-south-1",
            "tags": {
              "Name": "ci-cd-vpc"
            },
            "tags_all": {
              "Name": "ci-cd-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "550833548002",
            "id": "vpc-0998d1b710623b8d3",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}